--- a/274_H_index.ipynb
+++ b/274_H_index.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0da30d47",
    "metadata": {},
    "outputs": [],
@@ -72,22 +72,22 @@
     "# Greedy solution\n",
     "\n",
     "class Solution:\n",
-    "    def hIndex(self, citations: list[int]) -> int:          # Form a counter array i.e [0 0 0 .. len(citations)+1] \n",
-    "        counts = [0] * (len(citations) + 1)                 # e.g value 3 added to index 3. +1 is added to length for counting value 0\n",
+    "    def hIndex(self, citations: list[int]) -> int:          # Form a counter array for indexes i.e [0 0 0 .. len(citations)+1] \n",
+    "        counts = [0] * (len(citations) + 1)                 # +1 is added to length to account for value 0 i.e adding count for value 0 under 0th index\n",
     "        for item in citations:\n",
-    "            if item >= len(citations):                      # if value is greater than last index, add it under last index in counts\n",
+    "            if item >= len(citations):                      # if value is greater than last index, add count for it in last index only\n",
     "                counts[len(citations)] += 1\n",
     "            else:\n",
     "                counts[item] += 1\n",
     "        \n",
     "        print(\"citations:\", citations)\n",
-    "        print(\"index:\", )\n",
+    "        print(\"index:\", [p for p in range(len(citations)+1)])\n",
     "        print(\"counts:\", counts)\n",
     "        \n",
     "        total_citations = 0\n",
     "        for i in range(len(counts)-1, -1, -1):              # To count atleast amount for papers start counting in reverse and consider cumulative sum\n",
     "            total_citations += counts[i]\n",
-    "            if total_citations >= i:                        # i == cumulative sum represent atleast i amount of citations i.e h-index\n",
+    "            if total_citations >= i:                        # i equal to cumulative sum represent atleast i amount of citations for i th index i.e h-index\n",
     "                return i    \n",
     "        return 0\n",
     "        # Time: O(n)\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d4d2a5f6",
    "metadata": {},
    "outputs": [
@@ -106,6 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "citations: [3, 0, 6, 1, 5]\n",
+      "index: [0, 1, 2, 3, 4, 5]\n",
       "counts: [1, 1, 0, 1, 0, 2]\n"
      ]
     }
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "0f96a251",
    "metadata": {},
    "outputs": [
@@ -137,27 +139,6 @@
     "\n",
     "#print(output)\n",
     "print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9da349ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "citations = [3,0,6,1,5]\n",
-    "counts = [0] * (len(citations) + 1)\n",
-    "\n",
-    "print(counts)"
    ]
   },
   {
