--- a/55_Jump_Game.ipynb
+++ b/55_Jump_Game.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0da30d47",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,7 @@
     "        for i in range(len(nums) -1, -1, -1):           # Decrement index from right\n",
     "            if i + nums[i] >= goal:                     # \"i + nums[i]\" represents jump by value\n",
     "                goal = i                                # if its greater or equal to current index shift the goal to the current index\n",
+    "            print(goal)\n",
     "        \n",
     "        return True if goal==0 else False               # if goal becomes zero it reaches index 0\n",
     "        # Time = O(n)\n",
@@ -62,10 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d4d2a5f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# Test case\n",
     "\n",
