--- a/Easy/1365._How_Many_Numbers_Are_Smaller_Than_the_Current_Number.ipynb
+++ b/Easy/1365._How_Many_Numbers_Are_Smaller_Than_the_Current_Number.ipynb
@@ -39,29 +39,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ef453a89",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def smallerNumbersThanCurrent(self, nums):\n",
-    "        counter = {}\n",
-    "        for num in nums:\n",
-    "            if num in counter:\n",
-    "                counter[num] += 1\n",
-    "            else:\n",
-    "                counter[num] = 1\n",
+    "    def smallerNumbersThanCurrent(self, nums: list[int]) -> list[int]:\n",
+    "            temp = sorted(nums)\n",
+    "            d = {}\n",
+    "\n",
+    "            for i, num in enumerate(temp):\n",
+    "                if num not in d:\n",
+    "                    d[num] = i\n",
+    "\n",
+    "            print(d)\n",
+    "            \n",
+    "            retrieve = []\n",
+    "\n",
+    "            for i in nums:\n",
+    "                retrieve.append(d[i])\n",
+    "            \n",
+    "            return retrieve\n",
+    "            # Time complexity: O NLogN (due to sorted)\n",
+    "            # Space complexity: O(1)\n",
     "\n",
     "solve= Solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0e4fe496",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 0, 2: 1, 3: 3, 8: 4}\n"
+     ]
+    }
+   ],
    "source": [
     "# Test case\n",
     "\n",
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c6d14b75",
    "metadata": {},
    "outputs": [
@@ -80,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 6]\n"
+      "[4, 0, 1, 1, 3]\n"
      ]
     }
    ],
