--- a/Easy/268_Missing_Number.ipynb
+++ b/Easy/268_Missing_Number.ipynb
@@ -93,8 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0aab5604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [3,0,1]\n",
+    "\n",
+    "print(range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f611b3",
    "metadata": {},
    "outputs": [],
    "source": []
